Change to Rafting

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>IT Blog Site Plan</h1>
+    <h1>White Water Rafting Site Plan</h1>
     <h2>Valery Statov</h2>
-    <h2>WDD 130-1</h2>
+    <h2>WDD 130-Main</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose of this site is to tell people about the IT industry.</p>
+    <p>The purpose of the site is rafting services. This includes equipment, training from trainers and accompaniment throughout the water route.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>The audience of this site is people who are interested in the IT field, who want to learn new technologies and who want to keep abreast of all new technological trends.</p>
+    <p>Our target audience is people who love active and extreme recreation in nature.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="./images/logoitproject-kopiya.jpg" alt="Logo image" />
+    <img src="./images/rafting-logo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
