--- a/it_blog/site-plan.html
+++ b/it_blog/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Content</a>
+        <a href="#">About Us</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Content <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About Us  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        On this site you can find the latest news about the IT sector and modern technologies.<br>Here we talk about programming languages, neural networks, professions in IT, new trends in IT, the latest high-tech inventions and much more.<br>All articles on the site are sorted by newness. In the right side menu you can find the most popular articles.<br>Each article card contains: the name of the author of the article, date of publication of the article, the main title of the article, the first few sentences from the article, "Read Full" button.<br>At the bottom of the page is pagination (if there are more articles than necessary) and a footer, in which the navigation menu and links to social networks are duplicated.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="./images/hp-plan.jpg" alt="image for homepage">
+        <img src="./images/hp-plan-2.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Content</h3>
       <p>
-        [Written copy for the Page 2 here]
+        This page contains links to all articles, divided into categories, so that it is easier for the user to search for the material of interest to him.<br>All content looks like unordered lists, the names of which are categories.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="./images/c-plan.jpg" alt="image for page">
+        <img src="./images/c-plan-2.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This page talks about the team that created and maintains the IT Blog. Here is a brief background on the creation of the blog, links to the social networks of the team, as well as a feedback form (support).
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="./images/a-plan.jpg" alt="image for page3">
+        <img src="./images/a-plan-2.jpg" alt="image for page3">
 
       </ul>
       <hr>
@@ -163,13 +163,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Content</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
