--- a/it_blog/site-plan.html
+++ b/it_blog/site-plan.html
@@ -136,7 +136,7 @@
       <p>
         This page contains links to all articles, divided into categories, so that it is easier for the user to search for the material of interest to him.<br>All content looks like unordered lists, the names of which are categories.
       </p>
-      <p>Images for the Page 2</p>
+      <p>Images for the Content page</p>
         <img src="./images/c-plan.jpg" alt="image for page">
         <img src="./images/c-plan-2.jpg" alt="image for page">
 
@@ -145,7 +145,7 @@
       <p>
         This page talks about the team that created and maintains the IT Blog. Here is a brief background on the creation of the blog, links to the social networks of the team, as well as a feedback form (support).
       </p>
-      <p>Images for the Page 3</p>
+      <p>Images for the About Us page</p>
         <img src="./images/a-plan.jpg" alt="image for page3">
         <img src="./images/a-plan-2.jpg" alt="image for page3">
 
