--- a/it_blog/site-plan.html
+++ b/it_blog/site-plan.html
@@ -158,22 +158,13 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
+      <img src="./images/home-page-frame.png" alt="home page wireframe">
 
       <h3>Content</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="./images/content-frame.png" alt="page 2 wireframe">
 
       <h3>About Us</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="./images/about-us.png" alt="page 3 wireframe">
     </main>
   </body>
 
