--- a/it_blog/content.html
+++ b/it_blog/content.html
@@ -127,7 +127,7 @@
 
             <div class="about-us">
                 <a href="#">Authors</a>
-                <a href="#">Sitemap</a>
+                <a href="./site-plan.html">Sitemap</a>
                 <a href="#">About us</a>
                 <a href="#">Contact</a>
             </div>
