--- a/it_blog/index.html
+++ b/it_blog/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <h1>IT-BLOG</h1>
             <h2>10 reasons why you should<br>choose the IT field.</h2>
-            <p>Nunc mi tortor, venenatis fermentum ipsum id, gravida lacinia magna.<br>Suspendisse maximus neque at elit consequat aliquet...</p>
+            <p>If you work in the field of IT, study it, or are simply interested in modern technologies,<br>then you are welcome to us. Here you will find the most relevant news,<br>the most useful flocks and much more.</p>
             <button>READ MORE</button>
         </div>
     </div>
