added modal image

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -51,7 +51,12 @@
                 <h2>Rapids</h2>
             </section>
             <div id="background"></div>
-            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+            <img id="myImg" class="mountains" src="images/mountains.jpg" alt="Mountains">
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" id="img01">
+                    <div id="caption"></div>
+                </div>
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -76,5 +81,6 @@
             </div>
         </footer>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
