added content page css

--- a/it_blog/index.html
+++ b/it_blog/index.html
@@ -160,7 +160,7 @@
                     <a href="./index.html"><img src="./images/logo.jpg" alt="Logo"></a>
                     <a href="./index.html"><span>IT-Blog</span></a>
                 </div>
-                <p>Created by Statv Valery</p>
+                <p>Created by Statov Valery</p>
                 <p>© 2023 IT-Blog.  All rights reserved.<br>Terms of Service   •   Privacy Policy</p>
                 <a href="./site-plan.html">Site plan</a>
             </div>
